--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #f0f8ff; 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: 'Poor Story', system-ui, sans-serif;
+  color: #333333; 
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  color: #ff6347;
+  background-color: #ffffe0; 
+  padding: 10px 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+  font-size: 2em;
+  letter-spacing: 1.5px;
+  z-index: 1;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* MEDA QUERIES  */
+@media (max-width: 768px) {
+  .heading {
+    font-size: 1.25em;
+    margin: 15px 0;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+
+body {
+font-family: 'Poor Story', system-ui;
 }
